# JFA

./: CHANGELOG.md  JFA.cabal  README.md  default.nix
app/: Main.hs
src/: JFA.hs
